# estufa_pc

./: .gitignore  CHANGELOG_GPT.md  CMakeLists.txt  README.md  sdkconfig
.claude/: settings.local.json
main/: CMakeLists.txt  actuators.c  actuators.h  app_board.h  app_config.c  app_config.h  app_state.c  app_state.h  main.c  network_services.c  network_services.h  relay_control.c  relay_control.h  temperature_control.c  temperature_control.h
